feat:Added styling for blog webpage, defined structure of webpage from page.html.twig, added styling to specific block using css class

--- a/drupal/web/themes/custom/icecream/templates/page.html.twig
+++ b/drupal/web/themes/custom/icecream/templates/page.html.twig
@@ -1,39 +1,19 @@
 <div class="layout-container">
+<link rel="stylesheet" href="{{ directory }}/css/style.css">
 
-  <header role="banner">
-    {{ page.header }}
-  </header>
+
+  
 
   {{ page.primary_menu }}
 
-  {% if page.banner_top %}
-  <div class="layout-banner-top" role="banner">
-    {{ page.banner_top }}
-  </div>
-  {% endif %}
-
-  {{ page.help }}
+ 
 
   <main role="main">
     <div class="visually-hidden"><a id="main-content" tabindex="-1"></a></div>
-    {% if page.breadcrumb or page.header %}
-      <header class="content-header clearfix">
-        <div class="layout-container">
-          {{ page.breadcrumb }}
-          {{ page.header }}
-        </div>
-      </header>
-    {% endif %}
+   
 
     <div class="layout-container">
-      {{ page.pre_content }}
-      <div class="page-content clearfix">
-        {{ page.highlighted }}
-        {% if page.help %}
-          <div class="help">
-            {{ page.help }}
-          </div>
-        {% endif %}
+     
         {{ page.content }}
         {{ page.content_bottom }}
       </div>
