feat:Styling applied and content refecting after styling

--- a/drupal/web/themes/custom/icecream/css/style.css
+++ b/drupal/web/themes/custom/icecream/css/style.css
@@ -1,6 +1,6 @@
-body {
+/* body {
     background-color: #d34040 !important;
-}
+} */
 .custom-block-style {
     background-color: lightblue;
     padding: 20px;
