feat:merging with custom rbanch

--- a/drupal/web/themes/custom/icecream/css/style.css
+++ b/drupal/web/themes/custom/icecream/css/style.css
@@ -1,6 +1,6 @@
-/* body {
-    background-color: #d34040 !important;
-} */
+body {
+    background-color: #050505 !important;
+}
 .custom-block-style {
     background-color: lightblue;
     padding: 20px;
