--- a/drupal/web/themes/custom/icecream/templates/page.html.twig
+++ b/drupal/web/themes/custom/icecream/templates/page.html.twig
@@ -1,5 +1,6 @@
 <div class="layout-container">
 <link rel="stylesheet" href="{{ directory }}/css/style.css">
+{{ attach_library('icecream/js/blog_interactions') }}
 
   {{ page.primary_menu }}
   <body{{ attributes }}>
@@ -17,10 +18,8 @@
     </h1>
          
         {{ page.content }}
-        <div class="custom-message">
-  {{ theme_settings.icecream_custom_text }}
-</div>
-
+      {# <p><em>Estimated reading time: {{ reading_time }} minute(s)</em></p> #}
+        
         {{ page.content_bottom }}
       </div>
     </div>
