feat:added custom module to add blog_feature of word count

--- a/drupal/web/themes/custom/icecream/templates/node.html.twig
+++ b/drupal/web/themes/custom/icecream/templates/node.html.twig
@@ -39,6 +39,8 @@
 
     {{ content }}
         <p><em>Estimated reading time: {{ reading_time }} minute(s)</em></p>
+        <p>Word Count: {{ word_count }}</p>
+
   </div>
 
 </article>
