feat:added banner, video, anf footer using SDC

--- a/drupal/web/themes/custom/icecream/css/style.css
+++ b/drupal/web/themes/custom/icecream/css/style.css
@@ -1,6 +1,11 @@
 body {
     background-color: #000000 !important;
 }
+.custom-title-link a {
+  color: white !important; 
+  text-decoration: none !important;
+}
+
 .custom-block-style {
     background-color: lightblue;
     padding: 20px;
