--- a/drupal/web/themes/custom/icecream/templates/navigation/menu.html.twig
+++ b/drupal/web/themes/custom/icecream/templates/navigation/menu.html.twig
@@ -7,6 +7,7 @@
   display: flex;
   background-color: black; /* Black-themed navbar */
   justify-content: flex-end;
+  border-bottom:2px solid yellow;
 }
 
 .menu-item {
