--- a/drupal/web/themes/custom/icecream/templates/page.html.twig
+++ b/drupal/web/themes/custom/icecream/templates/page.html.twig
@@ -11,13 +11,12 @@
    
 
     <div class="layout-container">
-    <h1>
-         {# {{icecream_custom_text}} #}
+  
+        {{ include('icecream:banner',{Hero_Video:"/themes/custom/icecream/assets/Hero.mp4"})}}
 
-
-    </h1>
-         
         {{ page.content }}
+        {{ include('icecream:headerr')}}
+
       {# <p><em>Estimated reading time: {{ reading_time }} minute(s)</em></p> #}
         
         {{ page.content_bottom }}
