--- a/drupal/web/themes/custom/icecream/templates/page.html.twig
+++ b/drupal/web/themes/custom/icecream/templates/page.html.twig
@@ -1,6 +1,8 @@
 <div class="layout-container">
 <link rel="stylesheet" href="{{ directory }}/css/style.css">
 {{ attach_library('icecream/js/blog_interactions') }}
+{{ attach_library('icecream/social_links') }}
+
 
   {{ page.primary_menu }}
   <body{{ attributes }}>
@@ -20,6 +22,12 @@
       {# <p><em>Estimated reading time: {{ reading_time }} minute(s)</em></p> #}
         
         {{ page.content_bottom }}
+        {# /////////////////////////////////////////////////////// #}
+            {# {{ include('icecream:social_links')}} #}
+        {# /////////////////////////////////////////////////////// #}
+
+          {# {% include '@components/social-links/social-links.twig' %} #}
+
       </div>
     </div>
   </main>
