feat(omkar_hooks_events):explored events and hooks and used event dispatcher

--- a/drupal/web/themes/custom/icecream/css/style.css
+++ b/drupal/web/themes/custom/icecream/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fcfcfc !important;
+    background-color: #030303 !important;
 }
 .custom-title-link a {
   color: white !important; 
